force-app/main/default/objects/Contact_Point__c/Contact_Point__c.object-meta.xml
<CustomObject>
    <description>Contact point for communication</description>
    <label>Contact Point</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Contact Point Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>