force-app/main/default/objects/Contact_Point__c/fields/Web_Email__c.field-meta.xml
<CustomField>
    <fullName>Web_Email__c</fullName>
    <description>Web email address</description>
    <inlineHelpText>Web email address</inlineHelpText>
    <label>Web Email</label>
    <type>Email</type>
</CustomField>